--- a/2_KolekcjeGeneryczneTests/2_KolekcjeGeneryczneTests.csproj
+++ b/2_KolekcjeGeneryczneTests/2_KolekcjeGeneryczneTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HashSetTests.cs" />
     <Compile Include="StosTests.cs" />
     <Compile Include="KolejkaTests.cs" />
     <Compile Include="ListaTests.cs" />
