--- a/2_KolekcjeGeneryczne/2_KolekcjeGeneryczne.csproj
+++ b/2_KolekcjeGeneryczne/2_KolekcjeGeneryczne.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DziałyKolekcja.cs" />
     <Compile Include="Pracownik.cs" />
     <Compile Include="PracownikComparer.cs" />
     <Compile Include="Program.cs" />
